--- a/netty/14.http/1.Netty Http服务器例子.md
+++ b/netty/14.http/1.Netty Http服务器例子.md
@@ -151,3 +151,4 @@ public class Server {
 ## 参考
 
 1.  https://blog.csdn.net/u011943534/article/details/80476647
+2.  https://github.com/reymont/netty-in-action.git (fork)
