--- a/netty/14.http/2.Netty5.x服务端+客户端代码.md
+++ b/netty/14.http/2.Netty5.x服务端+客户端代码.md
@@ -145,4 +145,5 @@ public class ClientHandler extends SimpleChannelInboundHandler<String> {
 
 ## 参考
 
-1. https://blog.csdn.net/u011943534/article/details/80489234
+1.  https://blog.csdn.net/u011943534/article/details/80489234
+2.  https://github.com/reymont/netty-in-action.git (fork)
