--- a/mycat/1.分布式事务的实现.md
+++ b/mycat/1.分布式事务的实现.md
@@ -1,15 +1,12 @@
-* https://github.com/MyCATApache/Mycat-Server
 
 
-https://github.com/MyCATApache/Mycat-Server
-* http://www.mycat.io/
-* 从零开始 http://songwie.com/teachs?searthstr=Mycat&start=0&limit=100
-* 从零开始 http://songwie.com/articlelist/11
+5.  http://www.csdn.net/article/2015-07-16/2825228
+6.  http://mp.weixin.qq.com/s/ocL4MOzdjvHydtavzRos2w
 
 
 # MyCat：开源分布式数据库中间件
 
-* [MyCat：开源分布式数据库中间件-CSDN.NET ](http://www.csdn.net/article/2015-07-16/2825228)
+* [MyCat：开源分布式数据库中间件-CSDN.NET ]()
 
 * MyCat
   * 解决数据存储和业务规模迅速增长情况下的数据瓶颈问题
@@ -26,7 +23,7 @@ https://github.com/MyCATApache/Mycat-Server
 
 # Mycat 分布式事务的实现
 
-* [Mycat 分布式事务的实现 ](http://mp.weixin.qq.com/s/ocL4MOzdjvHydtavzRos2w)
+* [Mycat 分布式事务的实现 ]()
 
 * ACID
 * XA规范
