--- a/java/JVM/9.介绍JVM中对多线程锁的实现/3.使用无锁的方式和有锁的方式的程序性能对比.md
+++ b/java/JVM/9.介绍JVM中对多线程锁的实现/3.使用无锁的方式和有锁的方式的程序性能对比.md
@@ -1,5 +1,3 @@
-http://www.bubuko.com/infodetail-406102.html
-http://www.cnblogs.com/Cilimer/p/4021210.html
 
 这里分别使用有锁和无锁两种方式，对一个数值进行增加，一直增加到100000，然后输出使用时间的长短。
 
@@ -9,25 +7,26 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 
-public class TestAtomic {
-
-    // 设置线程数量
-    private static int N = 1000;
+public class ThreadAddTest {
     // 设置最大值
     private static int M = 1000000;
 
-    /**
-     * 无锁方法
-     * 
-     * @throws InterruptedException
-     */
-    private static void atomicMethod() throws InterruptedException {
+    public static void main(String[] args) throws InterruptedException {
+        if (args.length != 1) {
+            System.out.println("命令格式为 java ThreadAddTest 1000");
+        }
+        System.out.println("当线程数量为 ： " + args[0] + " 时：");
+        atomicMethod(Integer.valueOf(args[0]));
+        synMethod(Integer.valueOf(args[0]));
+    }
+
+    private static void atomicMethod(int N) throws InterruptedException {
         AtomicRun atomicRun = new AtomicRun();
         AtomicRun.endValue = M;
 
         ExecutorService service = Executors.newFixedThreadPool(N);
         // 开始时间
-        long starttime = System.currentTimeMillis();
+        long startTime = System.currentTimeMillis();
         for (int i = 0; i < N; i++) {
             service.submit(atomicRun);
         }
@@ -35,17 +34,12 @@ public class TestAtomic {
         service.awaitTermination(Integer.MAX_VALUE, TimeUnit.MILLISECONDS);
         // 结束时间
         long endTime = System.currentTimeMillis();
-        System.out.println("无锁线程数量为 ： " + N + " 开始时间为 ： " + starttime
-                + " 结束时间为 ： " + endTime + " 耗费时间为 ： " + (endTime - starttime)
+        System.out.println("无锁线程数量为 ： " + N + " 开始时间为 ： " + startTime
+                + " 结束时间为 ： " + endTime + " 耗费时间为 ： " + (endTime - startTime)
                 + "ms" + " value:" + AtomicRun.atomicInteger);
     }
 
-    /**
-     * 加锁方法
-     * 
-     * @throws InterruptedException
-     */
-    private static void synMethod() throws InterruptedException {
+    private static void synMethod(int N) throws InterruptedException {
         SynRun synRun = new SynRun();
         SynRun.endValue = M;
 
@@ -59,21 +53,12 @@ public class TestAtomic {
         long endTime = System.currentTimeMillis();
         System.out.println("有锁线程数量为 ： " + N + " 开始时间为 ： " + starttime
                 + " 结束时间为 ： " + endTime + " 耗费时间为 ： " + (endTime - starttime)
-                + "ms" + " value:" + AtomicRun.atomicInteger);
+                + "ms" + " value:" + SynRun.startValue);
     }
 
-    public static void main(String[] args) throws InterruptedException {
-        System.out.println("当线程数量为 ： " + N + "时：");
-        atomicMethod();
-        synMethod();
-    }
+
 }
 
-/**
- * 
- * @author 秦孔祥
- * 
- */
 class AtomicRun implements Runnable {
 
     protected static AtomicInteger atomicInteger = new AtomicInteger();
@@ -83,7 +68,11 @@ class AtomicRun implements Runnable {
     public void run() {
         int startValue = atomicInteger.get();
         while (startValue < endValue) {
-            startValue = atomicInteger.incrementAndGet();
+            if(atomicInteger.compareAndSet(startValue, startValue + 1)){
+                startValue++;
+            }else{
+                break;
+            }
         }
     }
 }
@@ -101,14 +90,14 @@ class SynRun implements Runnable {
     }
 
     private synchronized void addValue() {
-        startValue++;
+        if (startValue < endValue)
+            startValue++;
     }
 }
 ```
- 
 
-使用无锁的方式和有锁的方式的程序性能对比
+## 参考
 
-标签：class   style   java   使用   log   方法   it   for   时间   
-
-原文：
+1. http://www.cnblogs.com/Cilimer/p/4021210.html
+2. 实战Java高并发程序设计.葛一鸣
+3. https://github.com/reymont/concurrency-practice-design.git （fork）
