--- a/jenkins/15.pipeline/post/5.post.md
+++ b/jenkins/15.pipeline/post/5.post.md
@@ -53,6 +53,32 @@ pipeline {
 
 ```
 
+```groovy
+node {
+    
+        stage("build"){
+            echo 'Hello World'
+        }
+    
+ 
+}
+pipeline{
+    agent any
+    stages {
+        stage("Build") {
+            steps {
+                echo "another build"
+            }
+        }
+    }
+  post {
+        always {
+            echo 'always hello'
+        }
+   }
+   
+}
+```
 
 
 ## 参考
