--- a/kubernetes/16.日常维护/1.获取K8S集群中运行的所有容器镜像.md
+++ b/kubernetes/16.日常维护/1.获取K8S集群中运行的所有容器镜像.md
@@ -13,7 +13,7 @@ Play with Kubernetes
 
 在本练习中，我们将使用kubectl获取集群中运行的所有Pod，并以指定格式输出各Pod中运行的容器。
 
-0x01 列举所有命名空间中的容器
+## 0x01 列举所有命名空间中的容器
 
 使用命令kubectl get pods --all-namespaces获取所有命名空间中的所有Pod。
 使用-o jsonpath={..image}格式化输出，使其仅仅包含容器镜像名称，这将递归解析返回的json对象中的image字段。
