--- a/kubernetes/16.日常维护/5.pod排序.md
+++ b/kubernetes/16.日常维护/5.pod排序.md
@@ -1,13 +1,27 @@
 
-### kubectl --sort-by not working in 1.7.0
+```sh
+### 1. kubectl --sort-by not working in 1.7.0
 kubectl get events --sort-by='.metadata.creationTimestamp'
 kubectl get pods <pod-name> -o=custom-columns=NAME:.metadata.name,RSRC:.metadata.resourceVersion
 kubectl get event -o json | jq '.items |= sort_by(.lastTimestamp)'
 kubectl get po -n test02 -o json | jq '.items |= sort_by(.metadata.creationTimestamp)'
+### 2. 自定义两列：名称和创建时间
 kubectl get po -n test02 -o=custom-columns=NAME:.metadata.name,TIMESTAMP:.metadata.creationTimestamp
+### 3. -t " " 按空格分割，对第2列进行排序 -r 倒序 
+kubectl get po -n test02 -o=custom-columns=\
+NAME:.metadata.name,\
+STATUS:.status.phase,\
+TIMESTAMP:.metadata.creationTimestamp\
+| sort -t " " -k 2
+### 4. 列举所有命名空间中的容器。使用tr以新行替换空格，使用sort对结果排序，使用uniq统计镜像数量
+kubectl get pods --all-namespaces -o jsonpath="{..image}" |\
+tr -s '[[:space:]]' '\n' |\
+sort |\
+uniq -c
 
-### -t " " 按空格分割，对第2列进行排序 -r 倒序 
-kubectl get po -n test02 -o=custom-columns=NAME:.metadata.name,TIMESTAMP:.metadata.creationTimestamp| sort -t " " -k 2
+kubectl get pods -n test02 -o jsonpath="{..metadata.name}" |\
+tr -s '[[:space:]]' '\n' 
+```
 
 ## 参考
 
