--- a/jenkins/21.客户端/python/1.python-install.md
+++ b/jenkins/21.客户端/python/1.python-install.md
@@ -1,7 +1,11 @@
 
-
+## centos
 yum -y install epel-release
 yum -y install python-pip
+pip install python-jenkins
+
+## debian
+sudo apt-get update && sudo apt-get install -y python-pip
 pip install python-jenkins
 
 ## 参考
