--- a/java/JVM/12.asm/4.JVM指令集整理.md
+++ b/java/JVM/12.asm/4.JVM指令集整理.md
@@ -219,64 +219,37 @@ http://www.wangyuwei.me/2017/01/19/JVM指令集整理/
 sample1
 
 java
-1
-2
-3
 public void sample1(){
     int num = 5;
 }
 javap -c 查看字节码
-1
-2
-3
-4
-5
 public void sample1();
     Code:
        0: iconst_5
        1: istore_1
        2: return
 解释
-1
-2
-3
 iconst_5    //将int型5推送至栈顶
 istore_1    //将栈顶int型数值存入第1个本地变量
 return    //从当前方法返回void
 sample2
 
 java
-1
-2
-3
 public int sample2(int a, int b) {
     return a + b;
 }
 字节码及解释
-1
-2
-3
-4
-5
-6
 public int sample2(int, int);
     Code:
        0: iload_1    //将第1个int型本地变量推送至栈顶
        1: iload_2    //将第2个int型本地变量推送至栈顶
        2: iadd       //将栈顶两int型数值相加并将结果压入栈顶
        3: ireturn    //从当前方法返回int
-sample3
+## sample3
 
 java
 稍稍复杂点
 
-1
-2
-3
-4
-5
-6
-7
 public float sample3() {
     float num = 0;
     for (int i = 0; i < 5; i++) {
@@ -285,26 +258,7 @@ public float sample3() {
     return num;
 }
 字节码及解释
-1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
+
 public float sample3();
     Code:
        0: fconst_0    //将float型0推送至栈顶
