--- a/jenkins/13.Jenkins维护/4.Jenkins迁移job.md
+++ b/jenkins/13.Jenkins维护/4.Jenkins迁移job.md
@@ -15,6 +15,8 @@ cd /home/.jenkins
 tar -czvf jobs.tar.gz jobs
 scp -f jobs.tar root@BIP:/root/.jenkins/
 
+`tar zcvf jobs.tar.gz jobs --exclude=pardir/file1 --exclude=pardir/dir1`
+
 3、接着，在B上解压jobs.tar到jobs目录，并重启Jenkins服务器B。注意：重启不是必须的。
 1）通过重启hudson来加载新迁移的job：
 cd /root/.jenkins
