--- a/d3.js/d3.js.md
+++ b/d3.js/d3.js.md
@@ -1,4 +1,6 @@
 1. https://github.com/d3/d3/wiki/CN-Home
 2. https://github.com/d3/d3/wiki/API--%E4%B8%AD%E6%96%87%E6%89%8B%E5%86%8C
 3. https://github.com/tianxuzhang/d3.v4-API-Translation
-
+4. http://d3.decembercafe.org/index.html
+5. https://github.com/reymont/D3 (fork)
+6. https://github.com/reymont/d3-cookbook （fork）
