--- a/d3.js/5.比例尺和坐标轴/3.1.坐标轴绘制方法.md
+++ b/d3.js/5.比例尺和坐标轴/3.1.坐标轴绘制方法.md
@@ -33,12 +33,14 @@ var svg = d3.select("body").append("svg")
 // 用于坐标轴的线性比例尺
 var xScale = d3.scale.linear()
 				.domain([0,10])
-				.range([0,300]);
+                .range([0,300]);
+// 定义坐标轴
 var axis = d3.svg.axis()
-				.scale(xScale)
-				.orient("bottom");
+				.scale(xScale)     // 使用上面定义的比例尺
+				.orient("bottom"); // 刻度方向向下
+// 在svg中添加一个包含坐标轴各元素的g元素
 var gAxis = svg.append("g")
-			.attr("transform","translate(80,80)");
+			.attr("transform","translate(80,80)"); // 平移到(80,80)
 gAxis.attr("class","axis");
 //axis(gAxis);
 gAxis.call(axis);
@@ -69,3 +71,4 @@ gAxis.call(axis);
 
 1. 精通D3.js交互式数据可视化高级编程
 2. https://blog.csdn.net/dove88888888/article/details/68066085
+3. https://www.w3.org/TR/SVG2/painting.html#ShapeRendering
