--- a/d3.js/5.比例尺和坐标轴/1.2.序数比例尺.md
+++ b/d3.js/5.比例尺和坐标轴/1.2.序数比例尺.md
@@ -19,9 +19,31 @@ var ordinal = d3.scale.ordinal()
 ordinal(0); //返回 red
 ordinal(2); //返回 green
 ordinal(4); //返回 black
+
+var ordinal = d3.scale.ordinal()
+                .domain([1,2,3,4,5])
+                .rangePoints([0,100]);
+ 
+console.log( ordinal.range() );
+console.log( ordinal(1) );//0
+console.log( ordinal(3) );//50
+console.log( ordinal(5) );//100
+ 
+ordinal.rangePoints([0,100],5);
+console.log( ordinal.range() );//27.77777 38.88888 50 61.11111 72.22222
+ 
+//padding 是5    step 是100/(5+5-1)   =11.11111   
+// (padding*step/2)*2 + (padding-1)*step = (2*padding -1)*step = 100 => step = 100 / (2*padding -1)
+// padding = 5 => step = 100/(2*5 - 1)=11.11111
+ 
+ordinal.rangeRoundPoints([0,100],5);
+console.log( ordinal.range() );//28 39 50 61 72  取正了
 ```
 
 ## 参考
 
 1. 精通D3.js交互式数据可视化高级编程
 2. https://www.cnblogs.com/LO-ME/p/5384032.html
+3. https://www.cnblogs.com/chenjinxinlove/p/5608165.html
+4. https://github.com/d3/d3/wiki/序数比例尺#ordinal_rangePoints
+5. https://github.com/d3/d3/wiki/API--中文手册
