--- a/jenkins/15.pipeline/2.不重启jenkins停止僵尸进程.md
+++ b/jenkins/15.pipeline/2.不重启jenkins停止僵尸进程.md
@@ -11,6 +11,21 @@ Thread.getAllStackTraces().keySet().each() {
 Jenkins.instance.getItemByFullName("talent").getBuildByNumber(59).finish(hudson.model.Result.ABORTED, new java.io.IOException("Aborting build"));
 ```
 
+# http://172.20.62.42:8080/script
+
+```groovy
+Thread.getAllStackTraces().keySet().each() {
+  t -> println(t.getId()+ "\t"+t.getName());println(t.getId()+ "\t"+t.getName())
+}
+
+Jenkins.instance.getItemByFullName("talent") //JobName
+  .getBuildByNumber(75)                      // JobNumber
+  .finish(
+          hudson.model.Result.ABORTED,
+          new java.io.IOException("Aborting build")
+  );
+```
+
 Go to "Manage Jenkins" > "Script Console" to run a script on your server to interrupt the hanging thread.
 
 You can get all the live threads with Thread.getAllStackTraces() and interrupt the one that's hanging.
