--- a/program/多线程设计模式/12.Master-Worker模式/1.Master-Worker模式实现立方和相加.md
+++ b/program/多线程设计模式/12.Master-Worker模式/1.Master-Worker模式实现立方和相加.md
@@ -4,7 +4,7 @@ Master-Worker模式实现立方和相加 - 简书 https://www.jianshu.com/p/d48b
 本文作为，其他文章链接使用，单独参考意义不大。
 
 Master-Worker框架如下，首先实现的Master线程，主要用作分配任务，和返回结果集。
-
+```java
 /**
  * Created by Joker on 2015/3/9.
  */
@@ -149,6 +149,7 @@ public void executeCubic() {
         }
     }
 }
+```
 提交100个任务后由3个Worker线程进行计算，Master并不等待所有Worker线程执行完毕，就开始访问子结果集，进行相加计算，直到子结果集中的所有数据处理完毕，并且3个活跃Worker线程全部停止，才给出最终的立方总和。result最终结果便是1~100立方和。
 
 作者：小鄧子
