--- a/MachineLearning/Hadoop/1.docker-hadoop/3.docker-pig.md
+++ b/MachineLearning/Hadoop/1.docker-hadoop/3.docker-pig.md
@@ -5,13 +5,13 @@
 ### 1. 清理dockerhadoop_namenode
 docker rmi -f dockerhadoop_namenode
 ### 2. Dockerfile
-RUN curl -o /opt/pig-0.17.0.tar.gz --create-dirs http://mirror.bit.edu.cn/apache/pig/latest/pig-0.17.0.tar.gz &&
-      tar –xzf /opt/pig-0.17.0.tar.gz &&
-      export PIG_INSTALL=/opt/pig-0.17.0 &&
-      export PATH=$PATH:$PIG_INSTALL/bin &&
-      export HADOOP_HOME=/opt/hadoop-2.7.1 &&
+RUN curl -o /opt/pig-0.17.0.tar.gz --create-dirs http://mirror.bit.edu.cn/apache/pig/latest/pig-0.17.0.tar.gz
+RUN tar -xzf /opt/pig-0.17.0.tar.gz && \
+      export PIG_INSTALL=/opt/pig-0.17.0 && \
+      export PATH=$PATH:$PIG_INSTALL/bin && \
+      export HADOOP_HOME=/opt/hadoop-2.7.1 && \
       export PIG_CLASSPATH=$HADOOP_HOME/etc/hadoop
-      
+
 ```
 
 ## 参考
