--- a/MachineLearning/Hadoop/1.docker-hadoop/3.docker-pig.md
+++ b/MachineLearning/Hadoop/1.docker-hadoop/3.docker-pig.md
@@ -6,14 +6,18 @@
 docker rmi -f dockerhadoop_namenode
 ### 2. Dockerfile
 RUN curl -o /opt/pig-0.17.0.tar.gz --create-dirs http://mirror.bit.edu.cn/apache/pig/latest/pig-0.17.0.tar.gz
-RUN tar -xzf /opt/pig-0.17.0.tar.gz && \
-      export PIG_INSTALL=/opt/pig-0.17.0 && \
-      export PATH=$PATH:$PIG_INSTALL/bin && \
-      export HADOOP_HOME=/opt/hadoop-2.7.1 && \
-      export PIG_CLASSPATH=$HADOOP_HOME/etc/hadoop
-
+RUN tar -xzf /opt/pig-0.17.0.tar.gz -C /opt
+ENV PIG_INSTALL=/opt/pig-0.17.0 PATH=$PATH:$PIG_INSTALL/bin HADOOP_HOME=/opt/hadoop-2.7.1 PIG_CLASSPATH=$HADOOP_HOME/etc/hadoop
+### 3. docker build
+docker build -t dockerhadoop_namenode .
+### 4. pig命令
+# 本地模式
+pig –x local
+# 默认mapreduce模式
+pig –x mapreduce
 ```
 
 ## 参考
 
 1. https://github.com/reymont/docker-hadoop.git (fork)
+2. https://blog.csdn.net/zythy/article/details/18098651
