--- a/program/zookeeper/client/kazoo/5.遍历dubbo-zookeeper-url.md
+++ b/program/zookeeper/client/kazoo/5.遍历dubbo-zookeeper-url.md
@@ -5,9 +5,9 @@ from kazoo.client import KazooClient
 import urllib
 from urlparse import urlparse, parse_qsl
 
-zk = KazooClient(hosts='zookeeper.test01.svc.cluster.local:2181')
-zk.start();
-providers_node = '{0}/{1}/{2}'.format('dubbo', 'com.cmi.jego.sms.api.interfaces.ISendSMSMicroService', 'providers')
+zk = KazooClient(hosts='zookeeper:2181')
+zk.start()
+providers_node = '{0}/{1}/{2}'.format('dubbo', 'com.api.MicroService', 'providers')
 nodes = zk.get_children(providers_node)
 for child_node in nodes:
     url = urllib.unquote(child_node).decode('utf8')
