hadoop pig hive mahout

--- a/MachineLearning/Hadoop/1.docker-hadoop/4.docker-hive.md
+++ b/MachineLearning/Hadoop/1.docker-hadoop/4.docker-hive.md
@@ -1,6 +1,23 @@
 
 
+## Load data into Hive:
+
+docker-compose exec hive-server bash
+/opt/hive/bin/beeline -u jdbc:hive2://localhost:10000
+CREATE TABLE pokes (foo INT, bar STRING);
+LOAD DATA LOCAL INPATH '/opt/hive/examples/files/kv1.txt' OVERWRITE INTO TABLE pokes;
+
+
+## Then query it from PrestoDB. You can get presto.jar from PrestoDB website:
+
+wget https://repo1.maven.org/maven2/com/facebook/presto/presto-cli/0.183/presto-cli-0.183-executable.jar
+mv presto-cli-0.183-executable.jar presto.jar
+chmod +x presto.jar
+./presto.jar --server localhost:8080 --catalog hive --schema default
+presto> select * from pokes;
+
 
 ## 参考
 
 1. https://github.com/big-data-europe/docker-hive
+2. https://github.com/reymont/docker-hadoop.git (fork)
