--- a/program/python/核心/sys/1.命令行参数.md
+++ b/program/python/核心/sys/1.命令行参数.md
@@ -10,6 +10,7 @@ len(sys.argv) 是命令行参数个数。
 注：sys.argv[0] 表示脚本名。
 实例
 test.py 文件代码如下：
+```py
 #!/usr/bin/python
 # -*- coding: UTF-8 -*-
 
@@ -17,11 +18,13 @@ import sys
 
 print '参数个数为:', len(sys.argv), '个参数。'
 print '参数列表:', str(sys.argv)
+```
 执行以上代码，输出结果为：
 $ python test.py arg1 arg2 arg3
 参数个数为: 4 个参数。
 参数列表: ['test.py', 'arg1', 'arg2', 'arg3']
-getopt模块
+
+## getopt模块
 getopt模块是专门处理命令行参数的模块，用于获取命令行选项和参数，也就是sys.argv。命令行选项使得程序的参数更加灵活。支持短选项模式（-）和长选项模式（--）。
 该模块提供了两个方法及一个异常处理来解析命令行参数。
 getopt.getopt 方法
@@ -40,6 +43,7 @@ Exception getopt.GetoptError
 假定我们创建这样一个脚本，可以通过命令行向脚本文件传递两个文件名，同时我们通过另外一个选项查看脚本的使用。脚本使用方法如下：
 usage: test.py -i <inputfile> -o <outputfile>
 test.py 文件代码如下所示：
+```py
 #!/usr/bin/python
 # -*- coding: UTF-8 -*-
 
@@ -66,6 +70,7 @@ def main(argv):
 
 if __name__ == "__main__":
    main(sys.argv[1:])
+```
 执行以上代码，输出结果为：
 $ python test.py -h
 usage: test.py -i <inputfile> -o <outputfile>
