--- a/program/java/hadoop/3.MapReduce计算模型/4.HDFS的java api接口访问.md
+++ b/program/java/hadoop/3.MapReduce计算模型/4.HDFS的java api接口访问.md
@@ -9,7 +9,8 @@ FileSystem fs = FileSystem.get(conf);通过FileSystem的静态方法get获得该
 （3）：FSDataInputStream：HDFS的文件输入流，FileSystem.open()方法返回的即是此类。
 （4）：FSDataOutputStream：HDFS的文件输入出流，FileSystem.create()方法返回的即是此类。
 
-二：创建文件目录
+## 二：创建文件目录
+```java
 public static void mkdir(String path) throws IOException {
 		 //读取配置文件
 		Configuration conf = new Configuration();
@@ -28,8 +29,9 @@ public static void mkdir(String path) throws IOException {
 		//关闭文件系统
 		fs.close();
 	}
-
-三：删除文件/目录
+```
+## 三：删除文件/目录
+```java
 /*** 删除文件或者文件目录 
 	 * @throws IOException **/
 	public static void rmdir(String filePath) throws IOException {
@@ -51,8 +53,9 @@ public static void mkdir(String path) throws IOException {
 		//关闭文件系统
 		fs.close();
 	}
-
-四：创建文件
+```
+## 四：创建文件
+```java
 /**创建文件**/
 	 public static void createFile(String dst , byte[] contents) throws IOException{
 		//读取配置文件
@@ -71,8 +74,9 @@ public static void mkdir(String path) throws IOException {
 		System.out.println("文件创建成功！");
 		
 	 }
-
-五：列出目录下的文件
+```
+## 五：列出目录下的文件
+```java
  /**列出文件**/
 	 public static void listFile(String path) throws IOException{
 		//读取配置文件
@@ -89,10 +93,11 @@ public static void mkdir(String path) throws IOException {
 		//关闭文件系统
 		fs.close();
 	 }
+```
 
 
-
-六：上传本地文件
+## 六：上传本地文件
+```java
  /**上传本地文件**/
 	 public static void uploadFile(String src,String dst) throws IOException{
 		//读取配置文件
@@ -115,8 +120,9 @@ public static void mkdir(String path) throws IOException {
 		//关闭文件系统
 		fs.close();
 	 }
-
-七：文件重命名
+```
+## 七：文件重命名
+```java
 /**文件重命名**/
 	 public static void renameFile(String oldName,String newName) throws IOException{
 		//读取配置文件
@@ -136,7 +142,7 @@ public static void mkdir(String path) throws IOException {
 		//关闭文件系统
 		fs.close();
 	 }
-
+```
 八：读取文件内容
 public static void readFile(String uri) throws IOException {
 		//读取配置文件
