--- a/program/python/核心/string/2.Python字符串操作.md
+++ b/program/python/核心/string/2.Python字符串操作.md
@@ -28,7 +28,8 @@ Type "help", "copyright", "credits" or "license" for more information.
 >>> cmp(a,c)
 -1
 >>>
-Python字符串比较忽略大小写
+
+## Python字符串比较忽略大小写
  
 正则表达式，使用IGNORECASE标志
 
@@ -45,7 +46,9 @@ True
 'a multicased string'
 >>> s.find('multi')
 2
-python 字符串高级比较
+
+
+## python 字符串高级比较
 使用python库difflib可以实现两个字符串的比较，找到相同的部分
 
 Python difflib|SequenceMatcher|Differ|HtmlDiff 使用方法
@@ -61,6 +64,7 @@ SequenceMatcher 实例
  
 代码：
 
+```py
 import difflib
 from pprint import pprint
  
@@ -77,6 +81,7 @@ print "s.get_opcodes():"
 for tag, i1, i2, j1, j2 in s.get_opcodes():
     print ("%7s a[%d:%d] (%s) b[%d:%d] (%s)" %  (tag, i1, i2, a[i1:i2], j1, j2, b[j1:j2]))
     #在此实现你的功能
+```
 输出为:
 
 s.get_matching_blocks():
@@ -137,77 +142,78 @@ Type "help", "copyright", "credits" or "license" for more information.
 
 下面列出了常用的python实现的字符串操作
 
-1.复制字符串
+```py
+### 1.复制字符串
 #strcpy(sStr1,sStr2)
 sStr1 = 'strcpy'
 sStr2 = sStr1
 sStr1 = 'strcpy2'
 print sStr2
-2.连接字符串
+### 2.连接字符串
 #strcat(sStr1,sStr2)
 sStr1 = 'strcat'
 sStr2 = 'append'
 sStr1 += sStr2
 print sStr1
-3.查找字符
+### 3.查找字符
 #strchr(sStr1,sStr2)
 sStr1 = 'strchr'
 sStr2 = 'r'
 nPos = sStr1.index(sStr2)
 print nPos
-4.比较字符串
+### 4.比较字符串
 #strcmp(sStr1,sStr2)
 sStr1 = 'strchr'
 sStr2 = 'strch'
 print cmp(sStr1,sStr2)
-5.扫描字符串是否包含指定的字符
+### 5.扫描字符串是否包含指定的字符
 #strspn(sStr1,sStr2)
 sStr1 = '12345678'
 sStr2 = '456'
 #sStr1 and chars both in sStr1 and sStr2
 print len(sStr1 and sStr2)
-6.字符串长度
+### 6.字符串长度
 #strlen(sStr1)
 sStr1 = 'strlen'
 print len(sStr1)
-7.将字符串中的小写字符转换为大写字符
+### 7.将字符串中的小写字符转换为大写字符
 #strlwr(sStr1)
 sStr1 = 'JCstrlwr'
 sStr1 = sStr1.upper()
 print sStr1
-8.追加指定长度的字符串
+### 8.追加指定长度的字符串
 #strncat(sStr1,sStr2,n)
 sStr1 = '12345'
 sStr2 = 'abcdef'
 n = 3
 sStr1 += sStr2[0:n]
 print sStr1
-9.字符串指定长度比较
+### 9.字符串指定长度比较
 #strncmp(sStr1,sStr2,n)
 sStr1 = '12345'
 sStr2 = '123bc'
 n = 3
 print cmp(sStr1[0:n],sStr2[0:n])
-10.复制指定长度的字符
+### 10.复制指定长度的字符
 #strncpy(sStr1,sStr2,n)
 sStr1 = ''
 sStr2 = '12345'
 n = 3
 sStr1 = sStr2[0:n]
 print sStr1
-11.字符串比较，不区分大小写
+### 11.字符串比较，不区分大小写
 #stricmp(sStr1,sStr2)
 sStr1 = 'abcefg'
 sStr2 = 'ABCEFG'
 print cmp(sStr1.upper(),sStr2.upper())
-12.将字符串前n个字符替换为指定的字符
+### 12.将字符串前n个字符替换为指定的字符
 #strnset(sStr1,ch,n)
 sStr1 = '12345'
 ch = 'r'
 n = 3
 sStr1 = n * ch + sStr1[3:]
 print sStr1
-13.扫描字符串
+### 13.扫描字符串
 #strpbrk(sStr1,sStr2)
 sStr1 = 'cekjgdklab'
 sStr2 = 'gka'
@@ -217,12 +223,12 @@ for c in sStr1:
         nPos = sStr1.index(c)
         break
 print nPos
-14.翻转字符串
+### 14.翻转字符串
 #strrev(sStr1)
 sStr1 = 'abcdefg'
 sStr1 = sStr1[::-1]
 print sStr1
-15.查找字符串
+### 15.查找字符串
 python strstr
 
 #strstr(sStr1,sStr2)
@@ -235,5 +241,4 @@ sStr1 = 'ab,cde,fgh,ijk'
 sStr2 = ','
 sStr1 = sStr1[sStr1.find(sStr2) + 1:]
 print sStr1
-只有想不到,没有做不到！！！ 
-鸿鹄IT网络学院 
+```
