--- a/program/python/核心/os/4.python遍历文件夹下的文件.md
+++ b/program/python/核心/os/4.python遍历文件夹下的文件.md
@@ -5,7 +5,7 @@ list = os.listdir(rootdir) #列出文件夹下所有的目录与文件
 for i in range(0,len(list)):
        path = os.path.join(rootdir,list[i])
        if os.path.isfile(path):
-              #你想对文件的操作
+#你想对文件的操作
 ### 方法一 : 利用函数 os.walk()
 # os.walk() 会返回三元元组 (dirpath, dirnames, filenames)
 # dirpath : 根路径 (字符串)
@@ -26,7 +26,7 @@ import os
 def listDir(rootDir):
     for filename in os.listdir(rootDir):
         pathname = os.path.join(rootDir, filename)
-        if (os.path.isfile(filename)):
+        if (os.path.isfile(pathname)):
             print pathname
         else:
             listDir(pathname)
