--- a/program/java/hadoop/1.docker-hadoop/4.docker-hive.md
+++ b/program/java/hadoop/1.docker-hadoop/4.docker-hive.md
@@ -1,8 +1,11 @@
 
 
+```sh
 ## Load data into Hive:
 
 docker-compose exec hive-server bash
+# 或者
+docker exec -it dockerhive_hive-server_1 bash
 /opt/hive/bin/beeline -u jdbc:hive2://localhost:10000
 CREATE TABLE pokes (foo INT, bar STRING);
 LOAD DATA LOCAL INPATH '/opt/hive/examples/files/kv1.txt' OVERWRITE INTO TABLE pokes;
@@ -15,7 +18,7 @@ mv presto-cli-0.183-executable.jar presto.jar
 chmod +x presto.jar
 ./presto.jar --server localhost:8080 --catalog hive --schema default
 presto> select * from pokes;
-
+```
 
 ## 参考
 
