--- a/DevOps/git/3.分支/3.git提取出两个版本之间的差异文件并打包.md
+++ b/DevOps/git/3.分支/3.git提取出两个版本之间的差异文件并打包.md
@@ -4,5 +4,7 @@ $ git diff 608e120 4abe32e --name-only
 结合xargs进行打包
 $ git diff 608e120 4abe32e --name-only | xargs zip update.zip
 
+git diff remotes/origin/master remotes/origin/b5.1.1-0606 --name-only
+
 ## 参考
 1.  http://www.01happy.com/git-extract-different-files/
