--- a/DevOps/jenkins/15.pipeline/withCredentials/4.withCredentials.md
+++ b/DevOps/jenkins/15.pipeline/withCredentials/4.withCredentials.md
@@ -34,6 +34,7 @@ node {
 }
 Note the use of single quotes to define the script (implicit parameter to sh) in Groovy above. You want the secret to be expanded by the shell as an environment variable. The following idiom is potentially less secure, as the secret is interpolated by Groovy and so (for example) typical operating system process listings will accidentally disclose it:
 
+```groovy
 node {
   withCredentials([string(credentialsId: 'mytoken', variable: 'TOKEN')]) {
     sh /* WRONG! */ """
@@ -42,6 +43,7 @@ node {
     """
   }
 }
+```
 At least on Linux, environment variables can be obtained by other processes running in the same account, so you should not run a job which uses secrets on the same node as a job controlled by untrusted parties. In any event, you should always prefer expansion as environment variables to inclusion in the command, since Jenkins visualizations such as Blue Ocean will attempt to detect step parameters containing secrets and refuse to display them.
 
 The secret(s) will be masked (****) in case they are printed to the build log. This prevents you from accidentally disclosing passwords and the like via the log. (Bourne shell set +x, or Windows batch @echo off, blocks secrets from being displayed in echoed commands; but build tools in debug mode might dump all environment variables to standard output/error, or poorly designed network clients might display authentication, etc.) The masking could of course be trivially circumvented; anyone permitted to configure a job or define Pipeline steps is assumed to be trusted to use any credentials in scope however they like.
