--- a/cloud/kubernetes/16.日常维护/kubectl/1.jsonpath.md
+++ b/cloud/kubernetes/16.日常维护/kubectl/1.jsonpath.md
@@ -1,11 +1,11 @@
 
 
 ```sh
-$ kubectl get pods -o json
-$ kubectl get pods -o=jsonpath='{@}'
-$ kubectl get pods -o=jsonpath='{.items[0]}'
-$ kubectl get pods -o=jsonpath='{.items[0].metadata.name}'
-$ kubectl get pods -o=jsonpath='{range .items[*]}{.metadata.name}{"\t"}{.status.startTime}{"\n"}{end}'
+kubectl get pods -o json
+kubectl get pods -o=jsonpath='{@}'
+kubectl get pods -o=jsonpath='{.items[0]}'
+kubectl get pods -o=jsonpath='{.items[0].metadata.name}'
+kubectl get pods -o=jsonpath='{range .items[*]}{.metadata.name}{"\t"}{.status.startTime}{"\n"}{end}'
 kubectl get pods -n test02 -o=jsonpath='{range .items[*]}{.metadata.name}{"\n"}{end}'
 ```
 
