jenkins pipeline withCredentials

--- a/DevOps/jenkins/15.pipeline/withCredentials/4.withCredentials.md
+++ b/DevOps/jenkins/15.pipeline/withCredentials/4.withCredentials.md
@@ -9,6 +9,39 @@ node("master") {
     '''
   }
 }
+def updateProperty (property) {
+    withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: CREDENTIALS, usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]) {
+            def curlString = "curl -u " + env.USERNAME + ":" + env.PASSWORD + " " + "-X PUT " + SERVER_URL
+            def updatePropStr = curlString +  "/api/storage/${SOURCE_REPO}/docker-framework/${env.BUILD_NUMBER}?properties=${property}"
+            println "Curl String is " + updatePropStr
+            sh updatePropStr
+     }
+}
+node("master") {
+  // UsernamePasswordMultiBinding
+  withCredentials([usernamePassword(credentialsId: 'harbor', 
+                                    passwordVariable: 'PASSWORD',
+                                    usernameVariable: 'USERNAME')]) {
+    sh '''
+      docker login harbor.com -u $USERNAME -p $PASSWORD
+    '''
+  }
+}
+withCredentials([usernamePassword(credentialsId: 'amazon', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
+  // available as an env variable, but will be masked if you try to print it out any which way
+  // note: single quotes prevent Groovy interpolation; expansion is by Bourne Shell, which is what you want
+  sh 'echo $PASSWORD'
+  // also available as a Groovy variable
+  echo USERNAME
+  // or inside double quotes for string interpolation
+  echo "username is $USERNAME"
+}
+withCredentials(bindings: [sshUserPrivateKey(credentialsId: 'jenkins-ssh-key-for-abc', \
+                                             keyFileVariable: 'SSH_KEY_FOR_ABC', \
+                                             passphraseVariable: '', \
+                                             usernameVariable: '')]) {
+  // some block
+}
 ```
 
 
@@ -80,3 +113,5 @@ node {
 ## 参考
 
 1. https://jenkins.io/doc/pipeline/steps/credentials-binding/
+2. http://www.cnblogs.com/jinanxiaolaohu/p/9204739.html
+3. https://wiki.jenkins.io/display/JENKINS/Credentials+Binding+Plugin
