--- a/program/java/hadoop/13.mahout/2.推荐部分的ItemCF、UserCF.md
+++ b/program/java/hadoop/13.mahout/2.推荐部分的ItemCF、UserCF.md
@@ -1,5 +1,8 @@
 https://www.cnblogs.com/ahu-lichang/p/7073836.html
 
+
+`同现矩阵 * 评分矩阵 = 推荐结果`
+
 Mahout学习（主要学习内容是Mahout中推荐部分的ItemCF、UserCF、Hadoop集群部署运行）
 
 1、Mahout是什么？
