--- a/program/java/hadoop/13.mahout/8.RecommenderFilterSalaryResult.md
+++ b/program/java/hadoop/13.mahout/8.RecommenderFilterSalaryResult.md
@@ -13,6 +13,7 @@ https://github.com/reymont/hadoopdemo
 编程实现：RecommenderFilterSalaryResult.Java
  
 程序源代码RecommenderFilterSalaryResult.java：
+```java
 package org.conan.mymahout.recommendation.job;
 
 import java.io.BufferedReader;
@@ -120,6 +121,7 @@ public class RecommenderFilterSalaryResult {
                 BufferedReader br = new BufferedReader(new FileReader(new File(file)));
                 Set<Long> jobids = new HashSet<Long>();
                 String s = null;
+```
 复制代码
 运行结果：
 SLF4J: Failed to load class "org.slf4j.impl.StaticLoggerBinder".
@@ -151,7 +153,8 @@ Job recommendation Item and Salary list:
         (145,6800)(121,5300)(89,8400)
 复制代码
 
-参考：
+## 参考：
+
 Mahout之（一）数据承载http://www.douban.com/note/204399134/
 程序源代码下载:https://github.com/bsspirit/maven_mahout_template/releases/tag/mahout_recommend_v1
 其他资料:
@@ -163,7 +166,3 @@ http://blog.fens.me/mahout-recommend-engine/
 http://blog.fens.me/hadoop-mahout-recommend-job/ 
  
 myMahout.zip
-
-103.41 KB
-
-程序源代码及其测试数据文件
