--- a/program/java/hadoop/13.mahout/9.PreferenceArray.md
+++ b/program/java/hadoop/13.mahout/9.PreferenceArray.md
@@ -2,7 +2,7 @@ Mahout之（一）数据承载 https://www.douban.com/note/204399134/
 
 推荐数据的处理是大规模的，在集群环境下一次要处理的数据可能是数GB，所以Mahout针对推荐数据进行了优化。
 
-Preference
+## Preference
 在Mahout中，用户的喜好被抽象为一个Preference，包含了userId，itemId和偏好值（user对item的偏好）。Preference是一个接口，它有一个通用的实现是GenericPreference。
 Preference
 Preference
@@ -31,10 +31,9 @@ class test {
 如此一来的话，一个GenericPreference的对象就需要占用28个字节，userId(8bytes) + itemId(8bytes) + preference(4bytes) + 基本的8bytes = 28。如果我们使用了Collection<Preference>和Preference[]，就会浪费很多这基本的8字节。设想如果我们的数据量是上GB或是上TB，这样的开销是很难承受的。
 
 为此Mahout封装了一个PreferenceArray，用于保存一组用户喜好数据，为了优化性能，Mahout给出了两个实现类：GenericUserPreferenceArray和GenericItemPreferenceArray，分别按照用户和物品本身对用户偏好进行组装，这样就可以压缩用户ID或者物品ID的空间。 
-PreferenceArray
-PreferenceArray
 
-GenericUserPreferenceArray
+## PreferenceArray
+
 GenericUserPreferenceArray
 
 我们看到，GenericUserPreferenceArray包含了一个userId，一个itemId的数组long[]，一个用户的喜好评分数据float[]，而不是一个Preference对象的集合，它只有较少的对象需要被创建和gc的检查。
