--- a/program/java/JVM/7.介绍常用的JVM诊断和分析工具/jcmd/1.jcmd.md
+++ b/program/java/JVM/7.介绍常用的JVM诊断和分析工具/jcmd/1.jcmd.md
@@ -1,5 +1,16 @@
+### 列出当前虚拟机
 jcmd -l
+### 列出支持的命令
 jcmd 13 help
-jcmd 13 VM.native_memory
-jcmd 13 VM.command_line
-jcmd 13 VM.flags
+### 1. 查看虚拟机启动时间
+jcmd 2828 VM.uptime
+### 2. 打印线程栈信息
+jcmd 2828 Thread.print
+### 3. 类统计信息
+jcmd 2828 GC.class_histogram
+### 4. 导出堆信息
+jcmd 2828 GC.heap_dump D:\d.dump
+### 5. 获得系统的Properties内容
+jcmd 2828 VM.system_properties
+### 6. 启动参数
+jcmd 2828 VM.flags
