--- a/program/java/JVM/4.介绍GC的基本算法和思想/1.常用垃圾回收算法/5.分代算法.md
+++ b/program/java/JVM/4.介绍GC的基本算法和思想/1.常用垃圾回收算法/5.分代算法.md
@@ -6,4 +6,8 @@
   * 老年代使用标记压缩或标记清除算法；
 * 卡表：
   * 老年代的某一区域中的所有对象是否持有新生代对象的引用；
+  * 新生代在GC时，不用花大量的时间扫描所有年老代对象，来确定每一个对象的引用关系
+  * 可以先扫描卡表，只有卡表的标记位为1时，才需要扫描给定区域的年老代对象
+
+
 
