--- a/program/java/JVM/4.介绍GC的基本算法和思想/1.常用垃圾回收算法/6.分区算法.md
+++ b/program/java/JVM/4.介绍GC的基本算法和思想/1.常用垃圾回收算法/6.分区算法.md
@@ -3,4 +3,5 @@
 * 分区算法：
   * 分代算法将按照对象的生命周期长短划分成两个部分；
   * 分区算法将整个堆空间划分成连续的不同小区间；
-  * 每个小区间都独立使用，独立回收。
+  * 每个小区间都独立使用，独立回收；
+  * 一次回收若干个小区间，从而减少一次GC所产生的停顿。
