--- a/program/java/hadoop/2.bin-hadoop/4.解决Windows.access0等问题.md
+++ b/program/java/hadoop/2.bin-hadoop/4.解决Windows.access0等问题.md
@@ -8,7 +8,7 @@
   Hadoop2的WordCount.java统计代码如下：
 
      
-
+```java
 import java.io.IOException;
 import java.util.StringTokenizer;
  
@@ -70,7 +70,7 @@ public class WordCount {
     System.exit(job.waitForCompletion(true) ? 0 : 1);
   }
 }
-
+```
 
 问题一.An internal error occurred during: "Map/Reducelocation status updater".java.lang.NullPointerException
    我们hadoop-eclipse-plugin-2.6.0.jar放到Eclipse的plugins目录下，我们的Eclipse目录是F:\tool\eclipse-jee-juno-SR2\eclipse-jee-juno-SR2\plugins，重启一下Eclipse，然后，打开Window-->Preferens，可以看到Hadoop Map/Reduc选项，然后点击出现了An internal error occurredduring: "Map/Reduce location status updater".java.lang.NullPointerException，如图所示：
