--- a/cloud/harbor/1.安装/5.Docker镜像仓库Harbor之搭建及配置.md
+++ b/cloud/harbor/1.安装/5.Docker镜像仓库Harbor之搭建及配置.md
@@ -7,11 +7,12 @@ Harbor介绍
 Harbor服务搭建
 Harbor跨数据复制配置
 FAQ
-1、Harbor 介绍
+
+## 1、Harbor 介绍
 
 Docker容器应用的开发和运行离不开可靠的镜像管理，虽然Docker官方也提供了公共的镜像仓库，但是从安全和效率等方面考虑，部署我们私有环境内的Registry也是非常必要的。Harbor是由VMware公司开源的企业级的Docker Registry管理项目，它包括权限管理(RBAC)、LDAP、日志审核、管理界面、自我注册、镜像复制和中文支持等功能。
 
-2、环境、软件准备
+## 2、环境、软件准备
 
 本次演示环境，我是在虚拟机Linux Centos7上操作，以下是安装的软件及版本：
 
@@ -204,7 +205,7 @@ $ docker rmi -f 10.236.63.76/wanyang/nginx
 Untagged: 10.236.63.76/wanyang/nginx:latest
 Untagged: 10.236.63.76/wanyang/nginx@sha256:41ad9967ea448d7c2b203c699b429abe1ed5af331cd92533900c6d77490e0268
 
-2、退出admin账号，登录wanyang账号
+## 2、退出admin账号，登录wanyang账号
 $ docker logout 10.236.63.76
 Removing login credentials for 10.236.63.76
 $ docker login 10.236.63.76
@@ -212,7 +213,7 @@ Username: wanyang
 Password:
 Login Succeeded
 
-3、pull harbor镜像到本地
+## 3、pull harbor镜像到本地
 $ docker pull 10.236.63.76/wanyang/nginx:latest
 latest: Pulling from wanyang/nginx
 Digest: sha256:41ad9967ea448d7c2b203c699b429abe1ed5af331cd92533900c6d77490e0268
@@ -256,31 +257,14 @@ nginx                              latest              958a7ae9e569        2 wee
 10.236.63.62/wanyang/maven         3-jdk-8             c58c661bb6ad        5 weeks ago         653 MB
 10.236.63.76/wanyang/maven         3-jdk-8             c58c661bb6ad        5 weeks ago         653 MB
 maven                              3-jdk-8             c58c661bb6ad        5 weeks ago         653 MB
-1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
+
 我们在看下Harbor1和Harbor2上的操作日志，是都按照我们操作的顺序显示的。
 
 这里写图片描述
 
 这里写图片描述
 
-5、FAQ
+## 5、FAQ
 
 配置并启动Harbor之后，本地执行登录操作，报错：
 
